fix the part 4, geo  poiny bimkome point