@@ -4,16 +4,14 @@ import org.junit.jupiter.api.Test;
 import primitives.Point;
 import primitives.Ray;
 import primitives.Vector;
-
 import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.*;
+import geometries.Intersectable.GeoPoint;
 
 /**
  * Unit tests for geometries.Sphere class
  */
 class SphereTests {
-
 
     /**
      * Test method for {@link geometries.Sphere#Sphere(double, primitives.Point)}.
@@ -96,17 +94,16 @@ class SphereTests {
 
         // TC01: Ray starts outside and intersects the sphere at two points
         Ray ray1 = new Ray(new Point(-2, 0, 0), new Vector(1, 0, 0));
-        List<Point> result1 = sphere.findIntersections(ray1);
+        List<GeoPoint> result1 = sphere.findIntersections(ray1);
         assertNotNull(result1, "Expected intersections but got null");
         assertEquals(2, result1.size(), "Expected two intersection points");
 
         // Ensure points are sorted from closest to furthest
-        if (result1.get(0).getX() > result1.get(1).getX()) {
-            List<Point> tmp = List.of(result1.get(1), result1.get(0));
-            result1 = tmp;
+        if (result1.get(0).point.getX() > result1.get(1).point.getX()) {
+            result1 = List.of(result1.get(1), result1.get(0));
         }
-        assertEquals(new Point(-1, 0, 0), result1.get(0), "Wrong entry point");
-        assertEquals(new Point(1, 0, 0), result1.get(1), "Wrong exit point");
+        assertEquals(new Point(-1, 0, 0), result1.get(0).point, "Wrong entry point");
+        assertEquals(new Point(1, 0, 0), result1.get(1).point, "Wrong exit point");
 
         // TC02: Ray starts outside and misses the sphere
         Ray ray2 = new Ray(new Point(0, 2, 0), new Vector(0, 1, 0));
@@ -114,9 +111,9 @@ class SphereTests {
 
         // TC03: Ray starts inside the sphere (1 point)
         Ray ray3 = new Ray(new Point(0.5, 0, 0), new Vector(1, 0, 0));
-        List<Point> result3 = sphere.findIntersections(ray3);
+        List<GeoPoint> result3 = sphere.findIntersections(ray3);
         assertEquals(1, result3.size(), "Expected one intersection (ray exits sphere)");
-        assertEquals(new Point(1, 0, 0), result3.get(0), "Wrong exit point");
+        assertEquals(new Point(1, 0, 0), result3.get(0).point, "Wrong exit point");
 
         // TC04: Ray starts after the sphere (no intersection)
         Ray ray4 = new Ray(new Point(2, 0, 0), new Vector(1, 0, 0));
@@ -130,15 +127,15 @@ class SphereTests {
 
         // TC12: Ray starts at sphere surface and goes inside (1 intersection)
         Ray ray6 = new Ray(new Point(1, 0, 0), new Vector(-1, 0, 0));
-        List<Point> result6 = sphere.findIntersections(ray6);
+        List<GeoPoint> result6 = sphere.findIntersections(ray6);
         assertEquals(1, result6.size(), "Expected one intersection (from surface inward)");
-        assertEquals(new Point(-1, 0, 0), result6.getFirst(), "Wrong exit point");
+        assertEquals(new Point(-1, 0, 0), result6.get(0).point, "Wrong exit point");
 
         // TC13: Ray starts at center (1 intersection)
         Ray ray7 = new Ray(new Point(0, 0, 0), new Vector(0, 1, 0));
-        List<Point> result7 = sphere.findIntersections(ray7);
+        List<GeoPoint> result7 = sphere.findIntersections(ray7);
         assertEquals(1, result7.size(), "Expected one intersection from center");
-        assertEquals(new Point(0, 1, 0), result7.getFirst(), "Wrong exit point");
+        assertEquals(new Point(0, 1, 0), result7.get(0).point, "Wrong exit point");
 
         // TC14: Ray starts at surface and goes outward (no intersection)
         Ray ray8 = new Ray(new Point(0, 1, 0), new Vector(0, 1, 0));
@@ -148,5 +145,4 @@ class SphereTests {
         Ray ray9 = new Ray(new Point(0, 2, 0), new Vector(1, 0, 0));
         assertNull(sphere.findIntersections(ray9), "Expected no intersection (orthogonal miss)");
     }
-
 }
